versions/3.7/zh/SUMMARY.md
# Summary

## 用户手册 3.7

- [Cocos Creator 3.7](index.md)
- [关于 Cocos Creator](getting-started/introduction/index.md)
- [获取帮助和支持](getting-started/support.md)

## 基础知识

- [新手入门](getting-started/index.md)
    - [安装和启动](getting-started/install/index.md)
    - [使用 Dashboard](getting-started/dashboard/index.md)
    - [Hello World!](getting-started/helloworld/index.md)
    - [项目结构](getting-started/project-structure/index.md)
- [编辑器界面](editor/index.md)
    - [场景编辑器](editor/scene/index.md)
    - [层级管理器](editor/hierarchy/index.md)
    - [资源管理器](editor/assets/index.md)
    - [属性检查器](editor/inspector/index.md)
    - [控制台](editor/console/index.md)
    - [偏好设置](editor/preferences/index.md)
    - [项目设置](editor/project/index.md)
    - [主菜单](editor/mainMenu/index.md)
    - [工具栏](editor/toolbar/index.md)
    - [编辑器布局](editor/editor-layout/index.md)
    - [预览调试](editor/preview/index.md)
- [术语](glossary/index.md)

## 示例和教程

- [快速上手：制作第一个 2D 游戏](getting-started/first-game-2d/index.md)
    - [监听触摸事件](getting-started/first-game-2d/touch.md)
- [快速上手：制作第一个 3D 游戏](getting-started/first-game/index.md)
    - [进阶篇 - 添加阴影、光照和骨骼动画](getting-started/first-game/advance.md)
- [示例与教程](cases-and-tutorials/index.md)

## 工作流

- [升级指南](release-notes/index.md)
    - [v3.0 升级指南](release-notes/upgrade-guide-v3.0.md)
    - [v3.0 材质升级指南](material-system/effect-2.x-to-3.0.md)
    - [v3.1 材质升级指南](material-system/Material-upgrade-documentation-for-v3.0-to-v3.1.md)
    - [v3.3 动画剪辑数据升级指南](animation/animation-clip-migration-3.3.x.md)
    - [v3.5 材质升级指南](material-system/effect-upgrade-documentation-for-v3.4.2-to-v3.5.md)
    - [资源分包升级指南](asset/subpackage-upgrade-guide.md)
    - [资源管理模块升级指南](asset/asset-manager-upgrade-guide.md)
    - [v3.5 已构建工程升级指南](engine/template/native-upgrade-to-v3.5.md)
    - [v3.6 已构建工程升级指南](engine/template/native-upgrade-to-v3.6.md)
    - [v3.6 构建模板与 settings.json 升级指南](release-notes/build-template-settings-upgrade-guide-v3.6.md)
    - [Cocos Creator 3.6 材质升级指南](material-system/effect-upgrade-documentation-for-v3.5-to-v3.6.md)
    - [升级指南：粒子从 v3.5.x 升级到 v3.6.0](particle-system/particle-upgrade-documentation-for-v3.5-to-v3.6.md)

- [场景制作](concepts/scene/index.md)
    - [场景资源](asset/scene.md)
    - [节点和组件](concepts/scene/node-component.md)
    - [坐标系和节点变换](concepts/scene/coord.md)
    - [节点层级和渲染顺序](concepts/scene/node-tree.md)
    - [使用场景编辑器搭建场景](concepts/scene/scene-editing.md)
    - [多层次细节](editor/rendering/lod.md)

- [资源系统](asset/index.md)
    - [资源工作流](asset/asset-workflow.md)
    - [图像资源](asset/image.md)
        - [纹理贴图资源](asset/texture.md)
        - [精灵帧资源](asset/sprite-frame.md)
            - [图像资源的自动剪裁](ui-system/components/engine/trim.md)
        - [立方体贴图资源](asset/texture-cube.md)
        - [图集资源](asset/atlas.md)
        - [自动图集资源](asset/auto-atlas.md)
        - [艺术数字资源](asset/label-atlas.md)
    - [预制资源](asset/prefab.md)
    - [字体资源](asset/font.md)
    - [音频资源](asset/audio.md)
    - [材质资源](asset/material.md)
        - [FBX 智能材质导入](importer/materials/fbx-materials.md)
    - [模型资源](asset/model/mesh.md)
        - [从第三方工具导出模型资源](asset/model/dcc-export-mesh.md)
        - [从 3ds Max 中导出 FBX 模型资源](asset/model/max-export-fbx.md)
        - [从 Maya 中导出 FBX 模型资源](asset/model/maya-export-fbx.md)
        - [glTF 模型](asset/model/glTF.md)
        - [程序化创建网格](asset/model/scripting-mesh.md)
    - [Spine 骨骼动画资源](asset/spine.md)
    - [DragonBones 骨骼动画资源](asset/dragonbones.md)
    - [TiledMap 瓦片图资源](asset/tiledmap.md)
    - [JSON 资源](asset/json.md)
    - [文本资源](asset/text.md)

- [脚本指南及事件机制](scripting/index.md)
    - [编程语言支持](scripting/language-support.md)
    - [脚本基础](scripting/script-basics.md)
        - [创建脚本](scripting/setup.md)
        - [配置代码编辑环境](scripting/coding-setup.md)
        - [脚本运行环境](scripting/basic.md)
        - [装饰器使用](scripting/decorator.md)
        - [属性参数参考](scripting/reference/attributes.md)
        - [生命周期回调](scripting/life-cycle-callbacks.md)
        - [开发注意事项](scripting/readonly.md)
    - [脚本使用](scripting/usage.md)
        - [访问节点和其他组件](scripting/access-node-component.md)
        - [常用节点和组件接口](scripting/basic-node-api.md)
        - [创建和销毁节点](scripting/create-destroy.md)
        - [使用计时器](scripting/scheduler.md)
        - [组件和组件执行顺序](scripting/component.md)
        - [加载和切换场景](scripting/scene-managing.md)
        - [获取和加载资源](scripting/load-assets.md)
        - [tsconfig 配置](scripting/tsconfig.md)
    - [脚本进阶](scripting/reference-class.md)
    - [事件系统](engine/event/index.md)
        - [发射和监听事件](engine/event/event-emit.md)
        - [输入事件系统](engine/event/event-input.md)
        - [节点事件系统](engine/event/event-node.md)
        - [事件 API](engine/event/event-api.md)
    - [模块规范与示例](scripting/modules/index.md)
        - [引擎模块](scripting/modules/engine.md)
        - [外部模块使用案例](scripting/modules/example.md)
        - [模块规范](scripting/modules/spec.md)
        - [导入映射](scripting/modules/import-map.md)
    - [外部代码支持](scripting/external-scripts.md)

- [跨平台发布](editor/publish/index.md)
    - [发布 Android 应用](editor/publish/android/index.md)
        - [Android 构建示例](editor/publish/android/build-example-android.md)
        - [Android 构建选项](editor/publish/android/build-options-android.md)
        - [配置 Android 原生开发环境](editor/publish/android/build-setup-evn-android.md)
    - [发布 iOS 应用](editor/publish/ios/index.md)
        - [iOS 发布示例](editor/publish/ios/build-example-ios.md)
        - [iOS 构建选项](editor/publish/ios/build-options-ios.md)
    - [发布到 HUAWEI AppGallery Connect](editor/publish/publish-huawei-agc.md)
    - [发布 HUAWEI HarmonyOS 应用](editor/publish/publish-huawei-ohos.md)
    - [发布 macOS 应用](editor/publish/mac/index.md)
        - [macOS 发布示例](editor/publish/mac/build-example-mac.md)
        - [macOS 构建选项](editor/publish/mac/build-options-mac.md)
    - [发布 Windows 应用](editor/publish/windows/index.md)
        - [Windows 构建示例](editor/publish/windows/build-example-windows.md)
        - [Windows 构建选项](editor/publish/windows/build-options-windows.md)
    - [原生平台发布通用基础](editor/publish/publish-native-index.md)
        - [原生平台通用构建选项](editor/publish/native-options.md)
        - [安装配置原生环境](editor/publish/setup-native-development.md)
        - [原生平台 JavaScript 调试](editor/publish/debug-jsb.md)
    - [发布到小游戏平台](editor/publish/publish-mini-game.md)
        - [发布到 HUAWEI AppGallery Connect](editor/publish/publish-huawei-agc.md)
        - [发布到支付宝小游戏](editor/publish/publish-alipay-mini-game.md)
        - [发布到淘宝小游戏](editor/publish/publish-taobao-mini-game.md)
        - [发布到微信小游戏](editor/publish/publish-wechatgame.md)
            - [启用微信小游戏引擎插件](editor/publish/wechatgame-plugin.md)
            - [接入微信 PC 小游戏](editor/publish/publish-pc-wechatgame.md)
        - [发布到字节跳动小游戏](editor/publish/publish-bytedance-mini-game.md)
        - [发布到华为快游戏](editor/publish/publish-huawei-quick-game.md)
        - [发布到 OPPO 小游戏](editor/publish/publish-oppo-mini-game.md)
        - [发布到 vivo 小游戏](editor/publish/publish-vivo-mini-game.md)
        - [发布到小米快游戏](editor/publish/publish-xiaomi-quick-game.md)
        - [发布到百度小游戏](editor/publish/publish-baidu-mini-game.md)
        - [开放数据域](editor/publish/build-open-data-context.md)
        - [小游戏分包](editor/publish/subpackage.md)
    - [发布到 Facebook Instant Games 平台](editor/publish/publish-fb-instant-games.md)
    - [发布到 Web 平台](editor/publish/publish-web.md)
    - [通用构建选项介绍](editor/publish/build-options.md)
    - [命令行发布项目](editor/publish/publish-in-command-line.md)
    - [定制项目的构建模版](editor/publish/custom-project-build-template.md)
    - [构建流程简介与常见错误处理](editor/publish/build-guide.md)

## 功能模块

- [图形渲染](module-map/graphics.md)
    - [渲染管线](render-pipeline/overview.md)
        - [内置管线](render-pipeline/builtin-pipeline.md)
        - [自定义渲染管线（实验性质）](render-pipeline/custom-pipeline.md)
    - [相机](editor/components/camera-component.md)
    - [光照](concepts/scene/light.md)
        - [基于物理的光照](concepts/scene/light/pbr-lighting.md)
        - [光源](concepts/scene/light/lightType/index.md)
            - [平行光](concepts/scene/light/lightType/dir-light.md)
            - [球面光](concepts/scene/light/lightType/sphere-light.md)
            - [聚光灯](concepts/scene/light/lightType/spot-light.md)
            - [环境光](concepts/scene/light/lightType/ambient.md)
        - [基于多 Pass 的多光源支持](concepts/scene/light/additive-per-pixel-lights.md)
        - [阴影](concepts/scene/light/shadow.md)
        - [基于图像的光照](concepts/scene/light/probe/index.md)
            - [光照探针](concepts/scene/light/probe/light-probe.md)
                - [光照探针面板](concepts/scene/light/probe/light-probe-panel.md)
            - [反射探针](concepts/scene/light/probe/reflection-probe.md)
                - [反射探针面板](concepts/scene/light/probe/reflection-probe-panel.md)
                - [反射探针美术工作流](concepts/scene/light/probe/reflection-art-workflow.md)
            - [基于图像的光照示例](concepts/scene/light/probe/example.md)
            - [光照贴图](concepts/scene/light/lightmap.md)
    - [网格](module-map/mesh/index.md)
        - [MeshRenderer 组件](engine/renderable/model-component.md)
        - [SkinnedMeshRenderer 组件](module-map/mesh/skinnedMeshRenderer.md)
        - [SkinnedMeshBatchRenderer 组件](module-map/mesh/skinnedMeshBatchRenderer.md)
        - [从第三方工具导出模型资源](asset/model/dcc-export-mesh.md)
        - [从 3ds Max 中导出 FBX 模型资源](asset/model/max-export-fbx.md)
        - [从 Maya 中导出 FBX 模型资源](asset/model/maya-export-fbx.md)
        - [glTF 模型](asset/model/glTF.md)
        - [程序化创建网格](asset/model/scripting-mesh.md)
    - [纹理](module-map/texture/index.md)
        - [纹理贴图](asset/texture.md)
        - [立方体贴图](asset/texture-cube.md)
        - [压缩纹理](asset/compress-texture.md)
        - [渲染纹理](asset/render-texture.md)
    - [材质系统](material-system/overview.md)
        - [在脚本中使用材质](material-system/material-script.md)
        - [内置材质](material-system/builtin-material.md)
        - [材质系统类图](material-system/material-structure.md)
    - [着色器](shader/index.md)
        - [创建与使用](shader/effect-inspector.md)
        - [内置着色器](shader/effect-builtin.md)
            - [基于物理的光照模型 PBR](shader/effect-builtin-pbr.md)
            - [卡通渲染](shader/effect-builtin-toon.md)
            - [无光照](shader/effect-builtin-unlit.md)
        - [着色器语法](shader/effect-syntax.md)
            - [Pass 可选配置参数](shader/pass-parameter-list.md)
            - [YAML 101 语法简介](shader/yaml-101.md)
            - [GLSL 语法简介](shader/glsl.md)
            - [预处理宏定义](shader/macros.md)
            - [着色器片段（Chunk）](shader/effect-chunk-index.md)
        - [内置全局 Uniform](shader/uniform.md)
        - [公共函数库](shader/common-functions.md)
        - [前向渲染与延迟渲染 Shader 执行流程](shader/forward-and-deferred.md)
        - [表面着色器 - Surface Shader](shader/surface-shader.md)
            - [内置 Surface Shader 导读](shader/surface-shader/builtin-surface-shader.md)
            - [Surface Shader 基本结构](shader/surface-shader/surface-shader-structure.md)
            - [Surface Shader 执行流程](shader/surface-shader/shader-code-flow.md)
            - [include 机制](shader/surface-shader/includes.md)
            - [宏定义与重映射](shader/surface-shader/macro-remapping.md)
            - [使用宏定义实现函数替换](shader/surface-shader/function-replace.md)
            - [可替换的内置函数](shader/surface-shader/surface-function.md)
            - [渲染用途](shader/surface-shader/render-usage.md)
            - [光照模型](shader/surface-shader/lighting-mode.md)
            - [表面材质数据结构](shader/surface-shader/surface-data-struct.md)
            - [着色器类别](shader/surface-shader/shader-stage.md)
            - [组装器](shader/surface-shader/shader-assembly.md)
            - [VS 输入](shader/surface-shader/vs-input.md)
            - [FS 输入](shader/surface-shader/fs-input.md)
            - [自定义 Surface Shader](shader/surface-shader/customize-surface-shader.md)
            - [渲染调式功能](shader/surface-shader/rendering-debug-view.md)
        - [传统着色器 - Legacy Shader](shader/legacy-shader/legacy-shader.md)
            - [内置 Legacy Shader 导读](shader/legacy-shader/legacy-shader-builtins.md)
            - [Legacy Shader 主要函数与结构体](shader/legacy-shader/legacy-shader-func-struct.md)
        - [自定义着色器](shader/write-effect-overview.md)
            - [2D 精灵着色器：Gradient](shader/write-effect-2d-sprite-gradient.md)
            - [3D 着色器：RimLight](shader/write-effect-3d-rim-light.md)
        - [自定义几何体实例化属性](shader/instanced-attributes.md)
        - [UBO 内存布局策略](shader/ubo-layout.md)
        - [WebGL 1.0 向下兼容支持](shader/webgl-100-fallback.md)
        - [VSCode 着色器插件](shader/vscode-plugin.md)

    - [3D 渲染排序](engine/rendering/sorting.md)

    - [特效组件](module-map/effects/index.md)
        - [广告牌](particle-system/billboard-component.md)
        - [线段组件](particle-system/line-component.md)
    - [天空盒](concepts/scene/skybox.md)
    - [全局雾](concepts/scene/fog.md)
    - [几何渲染器](geometry-renderer/index.md)
    - [调试渲染器（Debug-Renderer）](debug-renderer/index.md)

- [2D 对象](2d-object/index.md)
    - [2D 渲染](2d-object/2d-render/index.md)
        - [渲染排序规则](ui-system/components/engine/priority.md)
        - [2D 渲染组件合批说明](ui-system/components/engine/ui-batch.md)
        - [2D 渲染对象自定义材质](ui-system/components/engine/ui-material.md)
        - [2D 渲染组件](ui-system/components/editor/render-component.md)
            - [Sprite 组件参考](ui-system/components/editor/sprite.md)
            - [Label 组件参考](ui-system/components/editor/label.md)
            - [Mask 组件参考](ui-system/components/editor/mask.md)
            - [Graphics 组件参考](ui-system/components/editor/graphics.md)
            - [RichText 组件参考](ui-system/components/editor/richtext.md)
            - [UIStaticBatch 组件参考](ui-system/components/editor/ui-static.md)
            - [Spine Skeleton 组件参考](editor/components/spine.md)
            - [DragonBones ArmatureDisplay 组件参考](editor/components/dragonbones.md)
            - [TiledMap 组件参考](editor/components/tiledmap.md)
            - [TiledTile 组件参考](editor/components/tiledtile.md)
            - [MotionStreak 组件参考](editor/components/motion-streak.md)
    - [UI 系统](2d-object/ui-system/index.md)
        - [UI 组件](ui-system/components/editor/base-component.md)
            - [Canvas 组件参考](ui-system/components/editor/canvas.md)
            - [UITransform 组件参考](ui-system/components/editor/ui-transform.md)
            - [Widget 组件参考](ui-system/components/editor/widget.md)
            - [Button 组件参考](ui-system/components/editor/button.md)
            - [Layout 组件参考](ui-system/components/editor/layout.md)
            - [EditBox 组件参考](ui-system/components/editor/editbox.md)
            - [ScrollView 组件参考](ui-system/components/editor/scrollview.md)
            - [ScrollBar 组件参考](ui-system/components/editor/scrollbar.md)
            - [ProgressBar 组件参考](ui-system/components/editor/progress.md)
            - [LabelOutline 组件参考](ui-system/components/editor/label-outline.md)
            - [LabelShadow 组件参考](ui-system/components/editor/label-shadow.md)
            - [Toggle 组件参考](ui-system/components/editor/toggle.md)
            - [ToggleContainer 组件参考](ui-system/components/editor/toggleContainer.md)
            - [Slider 组件参考](ui-system/components/editor/slider.md)
            - [PageView 组件参考](ui-system/components/editor/pageview.md)
            - [PageViewIndicator 组件参考](ui-system/components/editor/pageviewindicator.md)
            - [UIMeshRenderer 组件参考](ui-system/components/editor/ui-model.md)
            - [UICoordinateTracker 组件参考](ui-system/components/editor/ui-coordinate-tracker.md)
            - [UIOpacity 组件参考](ui-system/components/editor/ui-opacity.md)
            - [BlockInputEvents 组件参考](ui-system/components/editor/block-input-events.md)
            - [WebView 组件参考](ui-system/components/editor/webview.md)
            - [VideoPlayer 组件参考](ui-system/components/editor/videoplayer.md)
            - [SafeArea 组件参考](ui-system/components/editor/safearea.md)
        - [UI 实践指南](ui-system/components/engine/usage-ui.md)
            - [多分辨率适配方案](ui-system/components/engine/multi-resolution.md)
            - [对齐策略](ui-system/components/engine/widget-align.md)
            - [文字排版](ui-system/components/engine/label-layout.md)
            - [自动布局容器](ui-system/components/engine/auto-layout.md)
            - [制作动态生成内容的列表](ui-system/components/engine/list-with-data.md)
            - [制作可任意拉伸的 UI 图像](ui-system/components/engine/sliced-sprite.md)

- [动画系统](animation/index.md)
    - [动画剪辑](animation/animation-clip.md)
    - [动画组件参考](animation/animation-comp.md)
    - [使用动画编辑器](animation/animation.md)
        - [创建 Animation 组件和动画剪辑](animation/animation-create.md)
        - [动画编辑器面板介绍](animation/animation-editor.md)
        - [编辑动画剪辑](animation/edit-animation-clip.md)
            - [关键帧编辑视图](animation/animation-keyFrames.md)
            - [曲线编辑视图](animation/animation-curve.md)
            - [曲线编辑器](animation/curve-editor.md)
        - [添加动画事件](animation/animation-event.md)
        - [程序化编辑动画剪辑](animation/use-animation-curve.md)
    - [骨骼动画](animation/skeletal-animation.md)
        - [骨骼贴图布局设置](animation/joint-texture-layout.md)
    - [程序化控制动画](animation/animation-component.md)
        - [动画状态](animation/animation-state.md)
    - [变形动画](animation/morph.md)
    - [嵌入播放器](animation/embedded-player.md)
    - [Marionette 动画系统](animation/marionette/index.md)
        - [动画图资源](animation/marionette/animation-graph.md)
        - [动画控制器组件参考](animation/marionette/animation-controller.md)
        - [动画图面板](animation/marionette/animation-graph-panel.md)
        - [动画图层级](animation/marionette/animation-graph-layer.md)
        - [动画状态机](animation/marionette/animation-graph-basics.md)
        - [状态过渡](animation/marionette/state-transition.md)
        - [动画遮罩资源](animation/marionette/animation-mask.md)
        - [动画图变体](animation/marionette/animation-variant.md)

- [音频系统](audio-system/overview.md)
    - [AudioSource 组件参考](audio-system/audiosource.md)
    - [全局音频管理器示例](audio-system/audioExample.md)
    - [兼容性说明](audio-system/audioLimit.md)

- [物理系统](physics/index.md)
    - [2D 物理](physics-2d/physics-2d.md)
        - [2D 物理系统](physics-2d/physics-2d-system.md)
        - [2D 刚体组件](physics-2d/physics-2d-rigid-body.md)
        - [2D 碰撞体](physics-2d/physics-2d-collider.md)
        - [2D 碰撞回调](physics-2d/physics-2d-contact-callback.md)
        - [2D 物理关节](physics-2d/physics-2d-joint.md)
    - [3D 物理系统](physics/physics.md)
        - [设置物理引擎](physics/physics-engine.md)
        - [物理系统配置](physics/physics-configs.md)
        - [分组和掩码](physics/physics-group-mask.md)
        - [物理组件](physics/physics-component.md)
            - [碰撞体](physics/physics-collider.md)
            - [刚体](physics/physics-rigidbody.md)
            - [恒力组件](physics/physics-constantForce.md)
            - [约束](physics/physics-constraint.md)
        - [物理材质](physics/physics-material.md)
        - [物理事件](physics/physics-event.md)
        - [射线检测](physics/physics-raycast.md)
        - [连续碰撞检测](physics/physics-ccd.md)
        - [物理应用案例](physics/physics-example.md)

- [粒子系统](particle-system/index.md)
    - [2D 粒子](particle-system/2d-particle/2d-particle.md)
    - [3D 粒子](particle-system/overview.md)
        - [粒子系统模块](particle-system/module.md)
            - [主模块](particle-system/main-module.md)
            - [发射器模块](particle-system/emitter.md)
            - [速度模块](particle-system/velocity-module.md)
            - [加速度模块](particle-system/force-module.md)
            - [大小模块](particle-system/size-module.md)
            - [旋转模块](particle-system/rotation-module.md)
            - [颜色模块](particle-system/color-module.md)
            - [贴图动画模块](particle-system/texture-animation-module.md)
            - [限速模块](particle-system/limit-velocity-module.md)
            - [拖尾模块](particle-system/trail-module.md)
            - [渲染模块](particle-system/renderer.md)
        - [粒子属性编辑](particle-system/editor/index.md)
            - [控制面板](particle-system/editor/particle-effect-panel.md)
            - [粒子曲线编辑器](particle-system/editor/curve-editor.md)
            - [渐变色编辑器](particle-system/editor/gradient-editor.md)

- [缓动系统](tween/index.md)
    - [缓动接口](tween/tween-interface.md)
    - [缓动函数](tween/tween-function.md)
    - [缓动示例](tween/tween-example.md)

- [地形系统](editor/terrain/index.md)

- [资源管理](asset/asset-manager.md)
    - [loader 升级 assetManager 指南](asset/asset-manager-upgrade-guide.md)
    - [子包升级 Asset Bundle 指南](asset/subpackage-upgrade-guide.md)
    - [资源加载](asset/dynamic-load-resources.md)
    - [Asset Bundle](asset/bundle.md)
    - [资源释放](asset/release-manager.md)
    - [下载与解析](asset/downloader-parser.md)
    - [加载与预加载](asset/preload-load.md)
    - [缓存管理器](asset/cache-manager.md)
    - [可选参数](asset/options.md)
    - [管线与任务](asset/pipeline-task.md)
    - [资源管理注意事项 - meta 文件](asset/meta.md)

- [多语言（L10N）](editor/l10n/overview.md)
    - [译文服务商](editor/l10n/translation-service.md)
    - [收集并统计](editor/l10n/collect-and-count.md)
    - [语言编译](editor/l10n/compile-language.md)
    - [L10nLabel 组件](editor/l10n/l10n-label.md)
    - [示例](editor/l10n/script-using.md)
    - [API](editor/l10n/localization-editor-api.md)
    - [EXCEL 导入示例](editor/l10n/example-excel.md)

- [XR](xr/index.md)
    - [版本历史](xr/version-history.md)
    - [架构](xr/architecture/index.md)
        - [内置资源与预制体](xr/architecture/assets.md)
        - [XR 组件](xr/architecture/component.md)
        - [预览](xr/architecture/preview.md)
        - [XR 视频播放器](xr/architecture/xr-video-player.md)
        - [XR 网页浏览器](xr/architecture/xr-webview.md)
        - [XR 空间音频](xr/architecture/xr-spatial-audio.md)
        - [XR 合成层](xr/architecture/xr-composition-layer.md)
        - [透视](xr/architecture/xr-pass-through.md)
        - [AR](xr/architecture/ar-introduce.md)
            - [AR 相机](xr/architecture/ar-camera.md)
            - [AR Manager](xr/architecture/ar-manager.md)
            - [AR 自动化行为编辑](xr/architecture/ar-tracking-component.md)
            - [AR 交互](xr/architecture/ar-interaction.md)
    - [快速部署指南](xr/project-deploy/index.md)
        - [VR 项目创建](xr/project-deploy/vr-proj-deploy.md)
        - [VR 项目构建与发布](xr/project-deploy/vr-proj-pub.md)
        - [AR 项目创建](xr/project-deploy/ar-proj-deploy.md)
        - [AR 项目构建与发布](xr/project-deploy/ar-proj-pub.md)
        - [WebXR 项目配置](xr/project-deploy/webxr-proj-deploy.md)
        - [WebXR 项目构建与发布](xr/project-deploy/webxr-proj-pub.md)

- [原生开发](native/overview.md)
    - [原生平台二次开发指南](advanced-topics/native-secondary-development.md)
    - [Java 原生反射机制](advanced-topics/java-reflection.md)
    - [Objective-C 原生反射机制](advanced-topics/oc-reflection.md)
    - [JsbBridge JS 与 JAVA 通信](advanced-topics/js-java-bridge.md)
    - [JsbBridge JS 与 Objective-C 通信](advanced-topics/js-oc-bridge.md)
    - [JsbBridgeWrapper 基于原生反射机制的事件处理](advanced-topics/jsb-bridge-wrapper.md)
    - [JSB 2.0 使用指南](advanced-topics/JSB2.0-learning.md)
        - [JSB 手动绑定](advanced-topics/jsb-manual-binding.md)
        - [JSB 自动绑定](advanced-topics/jsb-auto-binding.md)
        - [Swig](advanced-topics/jsb-swig.md)
        - [Swig 示例](advanced-topics/jsb/swig/tutorial/index.md)
    - [CMake 使用简介](advanced-topics/cmake-learning.md)
    - [原生引擎内存泄漏检测系统](advanced-topics/memory-leak-detector.md)
    - [原生场景剔除](advanced-topics/native-scene-culling.md)
    - [原生性能剖析器](advanced-topics/profiler.md)
    - [原生插件](advanced-topics/native-plugins/brief.md)
        - [原生插件创建范例](advanced-topics/native-plugins/tutorial.md)
    - [原生引擎跨语言调用优化](advanced-topics/jsb-optimizations.md)
    
## 进阶教程

- [扩展编辑器](editor/extension/readme.md)
    - [扩展管理器面板](editor/extension/extension-manager.md)
    - [扩展模板与编译构建](editor/extension/create-extension.md)
    - [入门示例-菜单](editor/extension/first.md)
    - [入门示例-面板](editor/extension/first-panel.md)
    - [入门示例-扩展间通信](editor/extension/first-communication.md)
    - [扩展改名](editor/extension/extension-change-name.md)
    - [安装与分享](editor/extension/install.md)
    - [上架扩展到资源商店](editor/extension/store/upload-store.md)
    - [增强已有功能](editor/extension/contributions.md)
        - [自定义主菜单](editor/extension/contributions-menu.md)
        - [自定义消息](editor/extension/contributions-messages.md)
        - [调用引擎 API](editor/extension/scene-script.md)
        - [增强资源管理器面板](editor/assets/extension.md)
        - [自定义资源数据库](editor/extension/contributions-database.md)
        - [自定义属性检查器面板](editor/extension/inspector.md)
        - [自定义构建流程](editor/publish/custom-build-plugin.md)
        - [自定义项目设置面板](editor/extension/contributions-project.md)
        - [自定义偏好设置面板](editor/extension/contributions-preferences.md)
        - [快捷键](editor/extension/contributions-shortcuts.md)
    - [扩展系统详解](editor/extension/basic.md)
        - [基础结构](editor/extension/package.md)
        - [扩展包定义](editor/extension/define.md)
        - [消息系统](editor/extension/messages.md)
        - [配置系统](editor/extension/profile.md)
        - [面板系统](editor/extension/panel.md)
        - [UI 组件](editor/extension/ui.md)
    - [Editor 接口说明](editor/extension/editor-api.md)
        - [App](editor/extension/api/app.md)
        - [Clipboard](editor/extension/api/clipboard.md)
        - [Dialog](editor/extension/api/dialog.md)
        - [I18n](editor/extension/api/i18n.md)
        - [Logger](editor/extension/api/logger.md)
        - [Message](editor/extension/api/message.md)
        - [Network](editor/extension/api/network.md)
        - [Package](editor/extension/api/package.md)
        - [Panel](editor/extension/api/panel.md)
        - [Profile](editor/extension/api/profile.md)
        - [Project](editor/extension/api/project.md)
        - [Selection](editor/extension/api/selection.md)
        - [Utils](editor/extension/api/utils.md)
- [进阶主题](advanced-topics/index.md)
    - [如何向 Cocos 提交代码](submit-pr/submit-pr.md)
    - [存储和读取用户数据](advanced-topics/data-storage.md)
    - [引擎定制工作流程](advanced-topics/engine-customization.md)
    - [网页预览定制工作流程](editor/preview/browser.md)
    - [i18n 游戏多语言支持](advanced-topics/i18n.md)
    - [动态合图](advanced-topics/dynamic-atlas.md)
    - [热更新范例教程](advanced-topics/hot-update.md)
    - [热更新管理器](advanced-topics/hot-update-manager.md)
    - [HTTP 请求](advanced-topics/http.md)
    - [WebSocket](advanced-topics/websocket-introduction.md)
        - [WebSocket 客户端](advanced-topics/websocket.md)
        - [WebSocket 服务器](advanced-topics/websocket-server.md)
